# standard-templates

./: README.md  pyproject.toml  vscode-settings.json
