[project]
name = "my-project-name"  # no spaces, use hyphens/underscores
version = "0.1.0"
description = "Short description of the project"
readme = "README.md"
requires-python = ">=3.11"

# Runtime dependencies
dependencies = [
    # "fastapi>=0.115.0",
    # "uvicorn[standard]>=0.30.0",
    # "pandas>=2.0.0",
    # "selenium>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ipykernel>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
# Or, if you have a src layout:
# packages = ["src"]

# -------------------------
# Ruff configuration
# -------------------------

[tool.ruff]
target-version = "py311"         # change to "py313" if you really want 3.13-only
line-length = 100
exclude = ["build/", "dist/", ".venv/"]
extend-exclude = [
    ".vscode",
    ".idea",
    "__pycache__",
    ".python-version",
    ".ruff.toml",
    "ruff.toml",
    "setup.cfg"
]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Core rules: style, errors, imports, bugbear, pylint-like metrics
select = ["E", "F", "W", "I", "B", "B9", "PL"]
ignore = [
    "E266"  # Too many leading '#' for block comment – often too strict
    # Add more here if something is too noisy
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint.pylint]
# Complexity / size thresholds – tuned to be strict but not insane
max-args = 8
max-bool-expr = 4
max-branches = 15
max-locals = 15
max-nested-blocks = 5
max-positional-args = 6
max-public-methods = 20
max-returns = 8
max-statements = 120

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# -------------------------
# Mypy (optional but recommended)
# -------------------------

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
# For stricter libs, flip these later:
# disallow_untyped_defs = true
# disallow_incomplete_defs = true

# -------------------------
# Pytest configuration
# -------------------------

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
